--- a/see_data.ipynb
+++ b/see_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
     "import utils\n",
     "\n",
     "# Load Object Info\n",
-    "objects_df = pd.read_csv(\"benchmark_utils/objects_v1.csv\")\n",
+    "objects_df = pd.read_csv(\"models/objects_v1.csv\")\n",
     "print(\"Object Information Table:\")\n",
     "display(objects_df[['object', 'geometric_symmetry', 'location']])"
    ]
